# minecraft-remote-shutdown

./: Cargo.toml
src/: main.rs  shutdown.rs
src/user_api/: entry.rs  mod.rs  routes.rs  utils.rs
src/user_api/handlers/: get_time.rs  mod.rs  shutdown.rs
